--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "Youbora's map",
   "main": "index.js",
   "dependencies": {
+    "babelify": "^6.4.0",
     "csv-stream": "^0.1.3",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^4.0.1",
+    "grunt-contrib-less": "^1.0.1",
+    "grunt-contrib-uglify": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "lodash": "^3.10.1",
     "node-geocoder": "^3.4.1"
   },
   "devDependencies": {},
