--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Youbora's map",
   "main": "index.js",
   "dependencies": {
+    "JSONStream": "^1.0.6",
     "babelify": "^6.4.0",
+    "csv-parser": "^1.8.0",
     "csv-stream": "^0.1.3",
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
@@ -12,7 +14,10 @@
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "lodash": "^3.10.1",
-    "node-geocoder": "^3.4.1"
+    "mapbox-react": "^0.1.7",
+    "mapbox.js": "^2.2.2",
+    "node-geocoder": "^3.4.1",
+    "react": "^0.14.0"
   },
   "devDependencies": {},
   "scripts": {
