--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "JSONStream": "^1.0.6",
     "babelify": "^6.4.0",
+    "backbone": "^1.2.3",
     "csv-parser": "^1.8.0",
     "csv-stream": "^0.1.3",
     "grunt": "^0.4.5",
@@ -13,13 +14,17 @@
     "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
+    "jquery": "^2.1.4",
     "lodash": "^3.10.1",
-    "mapbox-react": "^0.1.7",
+    "mapbox-react": "^0.2.1",
     "mapbox.js": "^2.2.2",
     "node-geocoder": "^3.4.1",
-    "react": "^0.14.0"
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint-config-lightstream": "^1.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
