--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "backbone": "^1.2.3",
     "csv-parser": "^1.8.0",
     "csv-stream": "^0.1.3",
+    "generator-lightstream-config": "^0.1.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
     "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
+    "handlebars": "^4.0.4",
     "jquery": "^2.1.4",
+    "lightstream-backbone": "^0.1.1",
+    "lightstream-socket": "^0.4.3",
     "lodash": "^3.10.1",
     "mapbox-react": "^0.2.1",
     "mapbox.js": "^2.2.2",
     "moment": "^2.10.6",
     "node-geocoder": "^3.4.1",
     "react": "^0.14.0",
-    "react-dom": "^0.14.0"
+    "react-dom": "^0.14.0",
+    "request": "^2.65.0",
+    "ws": "^0.8.0"
   },
   "devDependencies": {
     "eslint-config-lightstream": "^1.0.0"
